[package]
name = "miniconfig"
version = "0.1.0"
authors = ["N/A <N/A>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dyn = []
bin = ["static_assertions"]
str_hash = ["ministrhash"]
lua = ["rlua", "rlua_ext"]
ini = ["bitflags"]

[dependencies]
rlua = { version = "0.17", optional = true }
rlua_ext = { path = "../rlua_ext", optional = true }
bitflags = { version = "1.2.1", optional = true }
ministrhash = { path = "../ministrhash", optional = true }
static_assertions = { version = "1.1.0", optional = true }

[[example]]
name = "example"
required-features = ["bin", "str_hash", "lua", "dyn", "ini"]
