[package]
name = "miniconfig"
version = "0.1.0"
authors = ["N/A <N/A>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dyn = []
bin = ["static_assertions"]
str_hash = ["ministr_macro"]
lua = ["rlua", "rlua_ext"]
ini = ["bitflags"]

[dependencies]
rlua = { path = "../rlua", optional = true }
rlua_ext = { path = "../rlua_ext", optional = true }
bitflags = { version = "1.2.1", optional = true }
ministr = { path = "../ministr" }
ministr_macro = { path = "../ministr_macro", optional = true }
static_assertions = { version = "1.1.0", optional = true }

[dev-dependencies]
ministr_macro = { path = "../ministr_macro" }

[[example]]
name = "example"
required-features = ["bin", "str_hash", "lua", "dyn", "ini"]
